Fix negative time bans, make ip bans still apply to unknown players